--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^0.8.7+4
+  http: ^0.13.5
+  get: ^4.6.5
+  fluttertoast: ^8.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
